--- a/public/index.html
+++ b/public/index.html
@@ -30,6 +30,10 @@
       integrity="sha384-rCA2D+D9QXuP2TomtQwd+uP50EHjpafN+wruul0sXZzX/Da7Txn4tB9aLMZV4DZm"
       crossorigin="anonymous"
     />
+    <link
+      href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
+      rel="stylesheet"
+    />
     <title>React App</title>
   </head>
   <body>
